098_bst_map/grade.txt
Grading at 11/23/2020:05:49:56.313727
For commit ID be5cc948ce10cbe6c1427586d41ee4c59f0761bd
Grading at Mon Nov 23 13:49:55 CST 2020
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>::BstMap(const BstMap<K, V>&) [with K = int; V = int]’:
89-tester.cpp:95:36:   required from here
bstmap.h:24:16: error: base operand of ‘->’ has non-pointer type ‘const BstMap<int, int>’
    root = copy(rhs->root);
                ^~~
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = int; V = int]’:
89-tester.cpp:131:10:   required from here
bstmap.h:29:17: error: base operand of ‘->’ has non-pointer type ‘const BstMap<int, int>’
     root = copy(rhs->root);
                 ^~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>::BstMap(const BstMap<K, V>&) [with K = int; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:95:36:   required from here
bstmap.h:24:16: error: base operand of ‘->’ has non-pointer type ‘const BstMap<int, std::__cxx11::basic_string<char> >’
    root = copy(rhs->root);
                ^~~
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = int; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:131:10:   required from here
bstmap.h:29:17: error: base operand of ‘->’ has non-pointer type ‘const BstMap<int, std::__cxx11::basic_string<char> >’
     root = copy(rhs->root);
                 ^~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>::BstMap(const BstMap<K, V>&) [with K = int; V = Tester]’:
89-tester.cpp:95:36:   required from here
bstmap.h:24:16: error: base operand of ‘->’ has non-pointer type ‘const BstMap<int, Tester>’
    root = copy(rhs->root);
                ^~~
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = int; V = Tester]’:
89-tester.cpp:131:10:   required from here
bstmap.h:29:17: error: base operand of ‘->’ has non-pointer type ‘const BstMap<int, Tester>’
     root = copy(rhs->root);
                 ^~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>::BstMap(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = int]’:
89-tester.cpp:95:36:   required from here
bstmap.h:24:16: error: base operand of ‘->’ has non-pointer type ‘const BstMap<std::__cxx11::basic_string<char>, int>’
    root = copy(rhs->root);
                ^~~
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = int]’:
89-tester.cpp:131:10:   required from here
bstmap.h:29:17: error: base operand of ‘->’ has non-pointer type ‘const BstMap<std::__cxx11::basic_string<char>, int>’
     root = copy(rhs->root);
                 ^~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>::BstMap(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:95:36:   required from here
bstmap.h:24:16: error: base operand of ‘->’ has non-pointer type ‘const BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >’
    root = copy(rhs->root);
                ^~~
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:131:10:   required from here
bstmap.h:29:17: error: base operand of ‘->’ has non-pointer type ‘const BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >’
     root = copy(rhs->root);
                 ^~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>::BstMap(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = Tester]’:
89-tester.cpp:95:36:   required from here
bstmap.h:24:16: error: base operand of ‘->’ has non-pointer type ‘const BstMap<std::__cxx11::basic_string<char>, Tester>’
    root = copy(rhs->root);
                ^~~
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = std::__cxx11::basic_string<char>; V = Tester]’:
89-tester.cpp:131:10:   required from here
bstmap.h:29:17: error: base operand of ‘->’ has non-pointer type ‘const BstMap<std::__cxx11::basic_string<char>, Tester>’
     root = copy(rhs->root);
                 ^~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>::BstMap(const BstMap<K, V>&) [with K = Tester; V = int]’:
89-tester.cpp:95:36:   required from here
bstmap.h:24:16: error: base operand of ‘->’ has non-pointer type ‘const BstMap<Tester, int>’
    root = copy(rhs->root);
                ^~~
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = Tester; V = int]’:
89-tester.cpp:131:10:   required from here
bstmap.h:29:17: error: base operand of ‘->’ has non-pointer type ‘const BstMap<Tester, int>’
     root = copy(rhs->root);
                 ^~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>::BstMap(const BstMap<K, V>&) [with K = Tester; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:95:36:   required from here
bstmap.h:24:16: error: base operand of ‘->’ has non-pointer type ‘const BstMap<Tester, std::__cxx11::basic_string<char> >’
    root = copy(rhs->root);
                ^~~
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = Tester; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:131:10:   required from here
bstmap.h:29:17: error: base operand of ‘->’ has non-pointer type ‘const BstMap<Tester, std::__cxx11::basic_string<char> >’
     root = copy(rhs->root);
                 ^~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘BstMap<K, V>::BstMap(const BstMap<K, V>&) [with K = Tester; V = Tester]’:
89-tester.cpp:95:36:   required from here
bstmap.h:24:16: error: base operand of ‘->’ has non-pointer type ‘const BstMap<Tester, Tester>’
    root = copy(rhs->root);
                ^~~
bstmap.h: In instantiation of ‘BstMap<K, V>& BstMap<K, V>::operator=(const BstMap<K, V>&) [with K = Tester; V = Tester]’:
89-tester.cpp:131:10:   required from here
bstmap.h:29:17: error: base operand of ‘->’ has non-pointer type ‘const BstMap<Tester, Tester>’
     root = copy(rhs->root);
                 ^~~
The code did not compile.  This test failed.

Overall Grade: F
